# SimpleCalpPyPyp

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/simplecalcpypip/: __init__.py  simplecalcpypip.py  simpleplot.py
tests/: test_simplecalcpypip.py
